--- a/src/main/resources/theme/bioconductor/login/theme.properties
+++ b/src/main/resources/theme/bioconductor/login/theme.properties
@@ -9,7 +9,7 @@ meta=viewport==width=device-width,initial-scale=1
 kcHtmlClass=login-pf
 kcLoginClass=login-pf-page
 
-kcLogoLink=http://www.keycloak.org
+kcLogoLink=https://www.bioconductor.org
 
 kcLogoClass=login-pf-brand
 
