--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>bioc.theme.app</groupId>
   <artifactId>bioc-theme</artifactId>
-  <version>1.0.0</version>
+  <version>VERSIONPLACE</version>
   <build>
     <plugins>
       <plugin>
         <groupId>bioc.theme.app</groupId>
         <artifactId>bioc-theme</artifactId>
-        <version>1.0.0</version>
+        <version>VERSIONPLACE</version>
         <configuration>
           <archive>
             <addMavenDescriptor>false</addMavenDescriptor>
