--- a/.github/workflows/build_jar.yaml
+++ b/.github/workflows/build_jar.yaml
@@ -1,6 +1,10 @@
 name: Build JAR
 
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
